--- a/host_vars/laptop/network.yml
+++ b/host_vars/laptop/network.yml
@@ -1,5 +1,6 @@
 ---
 
+network_manager: "{{ 'systemd-networkd' if desktop_environment in ['i3', 'sway'] else 'NetworkManager' }}"
 networkd_config:
   - wired: |
       [Match]
