--- a/host_vars/laptop/power.yml
+++ b/host_vars/laptop/power.yml
@@ -7,8 +7,10 @@ user_suspend: |
   ExecStartPre=-/usr/bin/playerctl pause
   ExecStartPre=-/bin/sh -c 'export XDG_RUNTIME_DIR=/run/user/$$(id -u); systemctl --user stop ws-wait-online.service'
   ExecStartPre=-/bin/sh -c 'export XDG_RUNTIME_DIR=/run/user/$$(id -u); systemctl --user stop dresrv-wait-online.service'
+  {% if desktop_environment in ['i3', 'sway'] %}
   # Only lock if not locked already
   ExecStart=/bin/sh -c 'pgrep -u andrei -x my-screenlock || /home/andrei/.local/bin/my-screenlock'
+  {% endif %}
 
 user_resume: |
   Type=oneshot
