--- a/host_vars/laptop/vars.yml
+++ b/host_vars/laptop/vars.yml
@@ -1,4 +1,6 @@
 ---
+
 _ports: {}
 node_exporter_web_listen_address: "0.0.0.0:{{ node_exporter_port }}"
 borg_laptop_passphrase: "{{ vault_borg_laptop_passphrase }}"
+desktop_environment: "sway"
