--- a/roles/laptop/defaults/main.yml
+++ b/roles/laptop/defaults/main.yml
@@ -1,5 +1,8 @@
 ---
 
+desktop_environment: "sway"
+install_logind_config: "{{ desktop_environment in ['i3', 'sway'] }}"
+install_sleep_config: "{{ install_logind_config }}"
 install_suspend_hooks: true
 
 user_suspend_users:
