--- a/host_vars/laptop/kde.yml
+++ b/host_vars/laptop/kde.yml
@@ -5,3 +5,134 @@ plasma_startup_scripts:
     content: |
       export MOZ_ENABLE_WAYLAND=1
       export MOZ_USE_XINPUT2=1
+
+# Heavily based on https://github.com/shalva97/kde-configuration-files/blob/master/scripts/setupKDE.fish
+kde_configs:
+  - "--file startkderc --group General --key systemdBoot true"
+  - "--file kdeglobals --group KDE --key SingleClick false"
+  # Disable corner stuff
+  - "--file kwinrc --group Effect-Cube --key BorderActivate '9'"
+  - "--file kwinrc --group Effect-Cube --key BorderActivateCylinder '9'"
+  - "--file kwinrc --group Effect-Cube --key BorderActivateSphere '9'"
+  - "--file kwinrc --group Effect-Cube --key TouchBorderActivate '9'"
+  - "--file kwinrc --group Effect-Cube --key TouchBorderActivateCylinder '9'"
+  - "--file kwinrc --group Effect-Cube --key TouchBorderActivateSphere '9'"
+  - "--file kwinrc --group Effect-DesktopGrid --key BorderActivate '9'"
+  - "--file kwinrc --group Effect-DesktopGrid --key TouchBorderActivate '9'"
+  - "--file kwinrc --group Effect-PresentWindows --key BorderActivate '9'"
+  - "--file kwinrc --group Effect-PresentWindows --key BorderActivateAll '9'"
+  - "--file kwinrc --group Effect-PresentWindows --key BorderActivateClass '9'"
+  - "--file kwinrc --group Effect-PresentWindows --key TouchBorderActivate '9'"
+  - "--file kwinrc --group Effect-PresentWindows --key TouchBorderActivateAll '9'"
+  - "--file kwinrc --group Effect-PresentWindows --key TouchBorderActivateClass '9'"
+  - "--file kwinrc --group ElectricBorders --key Bottom 'None'"
+  - "--file kwinrc --group ElectricBorders --key BottomLeft 'None'"
+  - "--file kwinrc --group ElectricBorders --key BottomRight 'None'"
+  - "--file kwinrc --group ElectricBorders --key Left 'None'"
+  - "--file kwinrc --group ElectricBorders --key Right 'None'"
+  - "--file kwinrc --group ElectricBorders --key Top 'None'"
+  - "--file kwinrc --group ElectricBorders --key TopLeft 'None'"
+  - "--file kwinrc --group ElectricBorders --key TopRight 'None'"
+  - "--file kwinrc --group TabBox --key BorderActivate '9'"
+  - "--file kwinrc --group TabBox --key BorderAlternativeActivate '9'"
+  - "--file kwinrc --group TabBox --key TouchBorderActivate '9'"
+  - "--file kwinrc --group TabBox --key TouchBorderAlternativeActivate '9'"
+  - "--file kwinrc --group TouchEdges --key Bottom 'None'"
+  - "--file kwinrc --group TouchEdges --key Left 'None'"
+  - "--file kwinrc --group TouchEdges --key Right 'None'"
+  - "--file kwinrc --group TouchEdges --key Top 'None'"
+  # Set auto-lock timeout
+  - "--file kscreenlockerrc --group Daemon --key Timeout 10"
+  # Set alt-tab to thumbnail grid
+  - "--file kwinrc --group TabBox --key LayoutName 'thumbnail_grid'"
+  # Set shortcuts
+  - "--file kglobalshortcutsrc --group org.kde.krunner.desktop --key _launch 'Meta+D,Alt+Space\tAlt+F2\tSearch,KRunner'"
+  - "--file kglobalshortcutsrc --group org.kde.dolphin.desktop --key _launch 'Meta+Alt+F,Meta+E,Dolphin'"
+  # Set firefox as default browser
+  - "--file kdeglobals --group General --key BrowserApplication 'firefox.desktop'"
+  # Configure spectacle
+  - "--file spectaclerc --group General --key clipboardGroup PostScreenshotCopyImage"
+  - "--file spectaclerc --group General --key onLaunchAction DoNotTakeScreenshot"
+  - "--file spectaclerc --group General --key useReleaseToCapture true"
+  # keyboard
+  - "--file kcminputrc --group Keyboard --key NumLock '0'"
+  - "--file kcminputrc --group Keyboard --key RepeatDelay '300'"
+  - "--file kcminputrc --group Keyboard --key RepeatRate '40'"
+  - "--file kxkbrc  --group Layout --key 'DisplayNames' ','"
+  - "--file kxkbrc  --group Layout --key 'LayoutList' 'us,no'"
+  - "--file kxkbrc  --group Layout --key 'Options' 'grp:rctrl_rshift_toggle'"
+  - "--file kxkbrc  --group Layout --key 'ResetOldOptions' 'true'"
+  - "--file kxkbrc  --group Layout --key 'Use' 'true'"
+  - "--file kxkbrc  --group Layout --key 'VariantList' ','"
+  # Night Color
+  - "--file kwinrc --group NightColor --key Active 'true'"
+  - "--file kwinrc --group NightColor --key Mode 'Location'"
+  - "--file kwinrc --group NightColor --key LatitudeFixed '59'"
+  - "--file kwinrc --group NightColor --key LongitudeFixed '5.7'"
+  - "--file kwinrc --group NightColor --key MorningBeginFixed '0700'"
+  - "--file kwinrc --group NightColor --key EveningBeginFixed '1900'"
+  - "--file kwinrc --group NightColor --key NightTemperature '4500'"
+
+kde_global_shortcuts:
+  # Disable
+  "activate task manager entry 1": "none"
+  "activate task manager entry 2": "none"
+  "activate task manager entry 3": "none"
+  "activate task manager entry 4": "none"
+  "activate task manager entry 5": "none"
+  "activate task manager entry 6": "none"
+  "activate task manager entry 7": "none"
+  "activate task manager entry 8": "none"
+  "activate task manager entry 9": "none"
+  "activate widget 3": "none"
+  "Activate Window Demanding Attention": "none"
+  "clipboard_action": "none"
+  "Kill Window": "none"
+  "manage activities": "none"
+  "MoveMouseToCenter": "none"
+  "MoveMouseToFocus": "none"
+  "next activity": "none"
+  "previous activity": "none"
+  "repeat_action": "none"
+  "RunClipboard": "none"
+  "Show Desktop": "none"
+  "ShowDesktopGrid": "none"
+  "stop current activity": "none"
+  "Suspend Compositing": "none"
+  "Switch to Desktop 1": "none"
+  "Switch to Desktop 2": "none"
+  "Switch to Desktop 3": "none"
+  "Switch to Desktop 4": "none"
+  "Switch to Next Keyboard Layout": "none"
+  "Switch Window Down": "none"
+  "Switch Window Left": "none"
+  "Switch Window Right": "none"
+  "Switch Window Up": "none"
+  "Toggle Screen Reader On and Off": "none"
+  "Window One Desktop Down": "none"
+  "Window One Desktop to the Left": "none"
+  "Window One Desktop to the Right": "none"
+  "Window One Desktop Up": "none"
+  "Window Operations Menu": "none"
+  # Assign
+  "Expose": "Meta+Tab"
+  "Log Out": "Meta+Shift+E"
+  "RectangularRegionScreenShot": "Meta+Shift+S"
+  "Show System Activity": "Ctrl+Shift+Esc"
+  "Turn Off Screen": 'Meta++\\tMeta+Pause'
+  "Window Close": "Meta+Q"
+  "Window Maximize": "Meta+Shift+Up"
+  "Window Minimize": "Meta+Shift+Down"
+  "Window Quick Tile Bottom": "Meta+Down"
+  "Window Quick Tile Left": "Meta+Left"
+  "Window Quick Tile Right": "Meta+Right"
+  "Window Quick Tile Top": "Meta+Up"
+  "Window to Next Screen": "Meta+Shift+Right"
+  "Window to Previous Screen": "Meta+Shift+Left"
+  # No go on Wayland
+  # "Switch to Screen 0": "Meta+1"
+  # "Switch to Screen 1": "Meta+2"
+  # "Switch to Screen 2": "Meta+3"
+  "Window to Screen 0": "Meta+Shift+1"
+  "Window to Screen 1": "Meta+Shift+2"
+  "Window to Screen 2": "Meta+Shift+3"
