--- a/host_vars/mt-router/wireguard.yml
+++ b/host_vars/mt-router/wireguard.yml
@@ -1,6 +1,10 @@
 ---
 
-wireguard_address: "10.4.20.1/32"
-wireguard_ip: "{{ wireguard_address | ipaddr('address') }}"
+wireguard_addresses:
+  - "10.4.20.1/24"
+  - "fd00:4:20::1/64"
+wireguard_address: "{{ wireguard_addresses | join(', ') }}"
+wireguard_ip: "{{ wireguard_addresses[0] | ipaddr('address') }}"
+wireguard_ipv6: "{{ wireguard_addresses[1] | ipaddr('address') }}"
 wireguard_endpoint: "{{ vault_wireguard_endpoint }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
