--- a/host_vars/webgw01/wireguard.yml
+++ b/host_vars/webgw01/wireguard.yml
@@ -1,13 +1,31 @@
 ---
 
 wireguard_interface: "mt"
-wireguard_address: "10.4.20.91/24"
-wireguard_ip: "{{ wireguard_address | ipaddr('address') }}"
-wireguard_dns: "10.4.20.1"
+wireguard_addresses:
+  - "10.4.20.91/24"
+  - "fd00:4:20::91/64"
+
+wireguard_dns_list:
+  - "{{ hostvars['mt-router'].wireguard_ip }}"
+  - "{{ hostvars['mt-router'].wireguard_ipv6 }}"
+  - "1.1.1.1"
+  - "8.8.8.8"
+
+wireguard_mt_allowed_ips:
+  - "{{ hostvars['mt-router'].wireguard_ip }}/32"
+  - "{{ home_net.vm.cidr }}"
+  - "{{ hostvars['dresrv'].ansible_host }}/32"
+  - "{{ hostvars['mt-router'].wireguard_ipv6 }}/128"
+  - "{{ home_net.vm.cidr6 }}"
+
+wireguard_address: "{{ wireguard_addresses | join(', ') }}"
+wireguard_ip: "{{ wireguard_addresses[0] | ipaddr('address') }}"
+wireguard_ipv6: "{{ wireguard_addresses[1] | ipaddr('address') }}"
+wireguard_dns: "{{ wireguard_dns_list | join(', ') }}"
 wireguard_private_key: "{{ vault_wireguard_private_key }}"
 
 wireguard_unmanaged_peers:
   mt:
     endpoint: "{{ hostvars['mt-router'].wireguard_endpoint }}"
-    allowed_ips: "10.4.20.1/32, {{ home_net.vm.cidr }}, {{ hostvars['dresrv'].ansible_host }}/32"
+    allowed_ips: "{{ wireguard_mt_allowed_ips | join(', ') }}"
     public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
