--- a/roles/arch-common/tasks/main.yml
+++ b/roles/arch-common/tasks/main.yml
@@ -15,6 +15,7 @@
   command: "hwclock --systohc"
   args:
     creates: "/etc/adjtime"
+  when: hwclock_sync | bool
   tags: ["time"]
 
 - name: Configure pacman
