--- a/roles/firewall_config/tasks/firewalld.yml
+++ b/roles/firewall_config/tasks/firewalld.yml
@@ -35,6 +35,15 @@
   loop_control:
     label: "{{ item.0.name }} - {{ item.1 }}"
 
+- name: Configure services
+  firewalld:
+    service: "{{ item.name }}"
+    zone: "{{ item.zone | default('public') }}"
+    permanent: true
+    state: "{{ (item.state | default('present') == 'present') | ternary('enabled', 'disabled') }}"
+  notify: reload firewalld
+  loop: "{{ firewalld_services }}"
+
 - name: Configure simple firewalld rules
   firewalld:
     zone: "{{ item.zone | default('public') }}"
