--- a/host_vars/dresrv/systemd/btrfs-scrub.yml
+++ b/host_vars/dresrv/systemd/btrfs-scrub.yml
@@ -8,8 +8,9 @@ __sd_btrfs_scrub:
       Description=Scrub all BTRFS disks
 
       [Service]
-      Type=oneshot
+      Type=forking
       ExecStart=btrfs scrub start /
+      ExecStop=btrfs scrub cancel /
 
       [Install]
       WantedBy=multi-user.target
