--- a/requirements.yml
+++ b/requirements.yml
@@ -14,6 +14,7 @@ roles:
   - name: cosandr.nextcloud
     src: https://github.com/cosandr/ansible-role-nextcloud.git
     scm: git
+    version: v1.1.0
   - name: elastic.elasticsearch
     version: v7.17.0
   - geerlingguy.docker
