--- a/requirements.yml
+++ b/requirements.yml
@@ -1,23 +1,27 @@
 #!/usr/bin/env -S ansible-galaxy install -r
 ---
 collections:
-  - ansible.posix
-  - community.general
+  - name: ansible.posix
+  - name: community.general
+
   - name: git@github.com:cosandr/ansible-collection-spatiumcepa-truenas.git
     version: master
     type: git
 
 roles:
+  - name: geerlingguy.docker
+  - name: geerlingguy.postgresql
+  - name: geerlingguy.gitlab
+  - name: cloudalchemy.pushgateway
+
   - name: cosandr.dnf_automatic
     src: https://github.com/cosandr/ansible-role-dnf-automatic.git
     scm: git
+
   - name: cosandr.nextcloud
     src: https://github.com/cosandr/ansible-role-nextcloud.git
     scm: git
-    version: v1.1.0
+    version: v1.2.0
+
   - name: elastic.elasticsearch
     version: v7.17.0
-  - geerlingguy.docker
-  - geerlingguy.postgresql
-  - geerlingguy.gitlab
-  - cloudalchemy.pushgateway
