Add hostname env var to docker-auto-update

--- a/host_vars/dresrv/systemd/docker-auto-update.yml
+++ b/host_vars/dresrv/systemd/docker-auto-update.yml
@@ -15,6 +15,7 @@ __sd_docker_auto_update:
       Environment=BUSY=1
       Environment=BUILD=1
       Environment=PULL=1
+      Environment=HOSTNAME={{ ansible_hostname | default(inventory_hostname) }}
       ExecStart=/usr/bin/bash run-all.sh
 
   # Every day at 05:00
