--- a/playbooks/gitlab.yml
+++ b/playbooks/gitlab.yml
@@ -64,7 +64,40 @@
     - role: cosandr.dnf_automatic
       tags: ["dnf_automatic"]
 
+  post_tasks:
+    - name: Add garbage collection job
+      template:
+        src: "{{ inventory_dir }}/files/gitlab/registry-garbage-collect.timer.j2"
+        dest: "/etc/systemd/system/registry-garbage-collect.timer"
+        owner: root
+        group: root
+        mode: 0644
+      notify:
+        - reload systemd
+        - enable and start garbage collection
+      tags: ["gitlab", "gc"]
+
+    - name: Copy garbage collection service
+      copy:
+        src: "{{ inventory_dir }}/files/gitlab/registry-garbage-collect.service"
+        dest: "/etc/systemd/system/registry-garbage-collect.service"
+        owner: root
+        group: root
+        mode: 0644
+      notify: reload systemd
+      tags: ["gitlab", "gc"]
+
   handlers:
+    - name: reload systemd
+      systemd:
+        daemon_reload: true
+
+    - name: enable and start garbage collection
+      systemd:
+        name: registry-garbage-collect.timer
+        state: started
+        enabled: true
+
     - name: reload firewalld
       service:
         name: firewalld
