--- a/host_vars/laptop/arch.yml
+++ b/host_vars/laptop/arch.yml
@@ -1,181 +1,21 @@
 ---
 
-pacman_i3_packages:
-  - arandr
-  - brightnessctl
-  - dunst
-  - evince
-  - feh
-  - file-roller
-  - gnome-calculator
-  - gnome-themes-extra
-  - gvfs-mtp
-  - gvfs-nfs
-  - gvfs-smb
-  - i3-gaps
-  - lxappearance
-  - numlockx
-  - pamixer
-  - pavucontrol
-  - picom
-  - playerctl
-  - qt5ct
-  - redshift
-  - rofi
-  - scrot
-  - thunar
-  - thunar-archive-plugin
-  - xclip
-  - xorg-xev
-  - xorg-xinit
-  - xorg-xinput
-  - xorg-xrandr
-  - xorg-xset
-
-aur_i3_packages:
-  - adwaita-qt
-  - i3lock-color
-  - i3lock-fancy-rapid-git
-  - polybar
-
-pacman_sway_packages:
-  - gammastep
-  - grim
-  - kanshi
-  - qt5-wayland
-  - slurp
-  - sway
-  - swaybg
-  - swayidle
-  - waybar
-  - wl-clipboard
-  - wofi
-  - xdg-desktop-portal-wlr
-  - xorg-xwayland
-
-aur_sway_packages:
-  - swaylock-effects-git
-  - wdisplays
-
-pacman_packages:
+host_pacman_packages:
   - acpi_call-dkms
-  - alacritty
-  - alsa-utils
-  - ansible
-  - ansible-lint
-  - autoconf
-  - automake
-  - base
-  - bat
-  - binutils
-  - bison
-  - bluez
-  - bluez-utils
-  - btrfs-progs
-  - deluge-gtk
-  - docker
-  - docker-compose
-  - efibootmgr
-  - ethtool
-  - fakeroot
-  - file
-  - findutils
-  - firefox
-  - firefox-i18n-nb-no
-  - firewalld
-  - flex
-  - freerdp
   - fwupd
-  - fzf
-  - gawk
-  - gcc
-  - gettext
-  - git
-  - gnu-netcat
-  - go
-  - grep
-  - groff
-  - gzip
-  - htop
-  - inetutils
   - intel-gpu-tools
   - intel-media-driver
   - intel-ucode
-  - iotop
-  - ipython
-  - iwd
-  - jq
-  - kitty
-  - libpulse
-  - libtool
   - libva-intel-driver
-  - libva-utils
-  - linux
-  - linux-firmware
-  - linux-headers
-  - linux-lts
-  - linux-lts-headers
-  - m4
-  - make
-  - man-db
-  - mesa-demos
-  - ncdu
-  - net-tools
-  - nextcloud-client
-  - noto-fonts
-  - noto-fonts-emoji
-  - ntfs-3g
-  - openssh
-  - otf-cascadia-code
-  - p7zip
-  - pacman-contrib
-  - pacutils
-  - patch
-  - pkgconf
   - powertop
-  - pyenv
-  - python-aiohttp
-  - python-jmespath  # ansible json filter
-  - python-llfuse    # borg mount
-  - python-netaddr   # ansible ip filter
-  - python-pip
-  - python-virtualenv
-  - python-websockets
-  - python-wheel
-  - reflector
-  - remmina
-  - sbctl
-  - screen
-  - sed
-  - smartmontools
   - sof-firmware
-  - sshfs
-  - sshpass
-  - sudo
-  - texinfo
-  - tmux
-  - ttf-fira-code
-  - ttf-font-awesome
-  - ttf-nerd-fonts-symbols
   - upower
-  - usbutils
-  - vim
-  - vlc
-  - which
-  - zsh
 
-aur_packages:
-  - hunspell-nb
-  - jetbrains-toolbox
-  - kernel-modules-hook
-  - paru-bin
-  - pyenv-virtualenv
-  - shellcheck-bin
+pacman_packages: "{{ base_pacman_packages + host_pacman_packages }}"
+aur_packages: "{{ base_aur_packages + host_aur_packages }}"
+host_aur_packages:
   - slack-desktop
-  - sublime-text-4
   - teams
-  - tmuxinator
-  - ttf-font-awesome-4
   - webex-bin
   - zoom
 
@@ -197,7 +37,9 @@ modprobe_config:
 # systemd-cryptenroll /dev/nvme0n1p2 --wipe-slot=tpm2
 # systemd-cryptenroll --tpm2-device=auto --tpm2-pcrs=0+1+7 /dev/nvme0n1p2
 
-kernel_params: "root=/dev/mapper/root rw rootflags=subvol=@ intel_iommu=on nmi_watchdog=0 resume=/dev/mapper/root resume_offset=941473 console=tty7 systemd.unified_cgroup_hierarchy=0"
+esp_src: "UUID=A14E-3411"
+extra_kernel_params: "intel_iommu=on nmi_watchdog=0 console=tty7 systemd.unified_cgroup_hierarchy=0"
+kernel_params: "root=/dev/mapper/root rw rootflags=subvol=@ resume=/dev/mapper/root resume_offset=941473 {{ extra_kernel_params }}"
 
 systemd_boot_entries:
   "arch-zen": |
