Gitlab and gw firewall updates

--- a/host_vars/webgw01/vars.yml
+++ b/host_vars/webgw01/vars.yml
@@ -1,5 +1,5 @@
 ---
 
 ansible_host: "{{ vault_ansible_host }}"
+ansible_host6: "{{ vault_ansible_host6 }}"
 ansible_user: "{{ vault_ansible_user }}"
-ipv6_address: "{{ vault_ipv6_address }}"
