--- a/group_vars/webgw/firewalld.yml
+++ b/group_vars/webgw/firewalld.yml
@@ -2,8 +2,7 @@
 
 firewalld_masquerade_zones:
   - "internal"
-firewalld_port_forwards:
-  - port: 4523
-    proto: tcp
-    toaddr: "{{ hostvars['gitlab01'].ansible_host }}"
-    toport: 22
+
+firewalld_rich_rules:
+  - zone: public
+    rich_rule: "rule family=ipv4 destination address={{ ansible_host }} forward-port port=22 protocol=tcp to-port=22 to-addr={{ hostvars['gitlab01'].ansible_host }}"
