--- a/group_vars/webgw/vars.yml
+++ b/group_vars/webgw/vars.yml
@@ -1,8 +1,10 @@
 ---
 
+ansible_port: 5622
+
 domains: "{{ vault_domains }}"
 domain: "{{ domains[0] }}"
 
-fail2ban_ignoreip:
+__f2b_extra_ignore:
   - "127.0.0.1/8"
   - "::1"
