--- a/host_vars/truenas/vars.yml
+++ b/host_vars/truenas/vars.yml
@@ -4,3 +4,8 @@ ansible_connection: spatiumcepa.truenas.truenas_api
 ansible_truenas_api_address: "{{ vault_truenas_api_url }}"
 ansible_truenas_api_token: "{{ vault_truenas_api_key }}"
 ansible_truenas_validate_certs: false
+
+local_ips:
+  vm: "{{ home_net.vm.cidr | ipaddr('2') | ipaddr('address') }}"
+  general: "{{ home_net.general.cidr | ipaddr('2') | ipaddr('address') }}"
+  mgmt: "{{ home_net.mgmt.cidr | ipaddr('2') | ipaddr('address') }}"
